fix: cart page place order adjust spacing

--- a/frontend/src/app/cart/cart.page.scss
+++ b/frontend/src/app/cart/cart.page.scss
@@ -88,7 +88,7 @@ ion-list {
 }
 .fixed-bottom-container {
   position: absolute;
-  bottom: 96px;
+  bottom: 22px;
   left: 0;
   right: 0;
   padding: 0 16px;
